Adicionando dados em Weapon e lógica de ataque

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,3 +10,7 @@ spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Use data.sql after init
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
